Target: Local -> Py-Learn [beta]
OS: MAC
app: Jupyter

--- a/Coursera/Crash Course on Python by Google/Week 5 - Object Oriented Programming/5_1 - 4.ipynb
+++ b/Coursera/Crash Course on Python by Google/Week 5 - Object Oriented Programming/5_1 - 4.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e3d8cdb7-014a-47d7-a7d6-875706d6523b",
    "metadata": {},
    "outputs": [],
@@ -73,6 +73,15 @@
     "golden = Apple()\n",
     "golden.color = \"Yellow\"\n",
     "golden.flavor = \"Soft\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0c855a-7992-4e3c-a1b2-0464b84a5b7c",
+   "metadata": {},
+   "source": [
+    "We now have another Apple object called golden that also has color and flavor attributes. But these attributes have\n",
+    "different values."
    ]
   }
  ],
