Target: Local -> Py-Learn [beta]
OS: MAC
app: Jupyter

--- a/Coursera/Crash Course on Python by Google/Week 5 - Object Oriented Programming/5_3 Code Reuse - 1 Inheritance.ipynb
+++ b/Coursera/Crash Course on Python by Google/Week 5 - Object Oriented Programming/5_3 Code Reuse - 1 Inheritance.ipynb
@@ -178,11 +178,11 @@
     "- On this employee, we might have the attributes such as:\n",
     "    - full name\n",
     "    - employee ID \n",
-    "    # user group, etc\n",
+    "    - user group, etc\n",
     "- This employee class could have some methods such as:\n",
-    "    # check the group they're belong (staff, managerial, supervisor, etc)\n",
-    "    # check the division (marketing, tech, support, HR, etc)\n",
-    "    # creating email address based on their full name"
+    "    - check the group they're belong (staff, managerial, supervisor, etc)\n",
+    "    - check the division (marketing, tech, support, HR, etc)\n",
+    "    - creating email address based on their full name"
    ]
   }
  ],
