--- a/Coursera/Crash Course on Python by Google/Week 5 - Object Oriented Programming/5_3 Code Reuse - 2 Composition.ipynb
+++ b/Coursera/Crash Course on Python by Google/Week 5 - Object Oriented Programming/5_3 Code Reuse - 2 Composition.ipynb
@@ -61,17 +61,70 @@
    "metadata": {},
    "source": [
     "# EXPLANATION\n",
-    "In the constructor method, we initialize the packages dictionary, which will contain the package objects available in this repository instance. Weinitialize the dictionary in the constructor to ensure that every \n",
-    "instance of the Repository class has its own dictionary. \n",
+    "In the constructor method, we initialize the packages dictionary, which will contain the package objects available in this repository instance. We initialize the dictionary in the constructor to ensure that every instance of the Repository class has its own dictionary. \n",
     "\n",
-    "We then define the add_package method, which takes a Package object as a parameter, and then adds it to our \n",
-    "dictionary, using the package name attribute as the key. \n",
+    "We then define the add_package method, which takes a Package object as a parameter, and then adds it to our dictionary, using the package name attribute as the key. \n",
     "\n",
-    "Finally, we define a total_size method which computes the total size of all packages contained in our repository. \n",
-    "This method iterates through the values in our repository dictionary and adds together the size attributes from each \n",
-    "package object contained in the dictionary, returning the total at the end. In this example, we’re making use of \n",
-    "Package attributes within our Repository class. We’re also calling the values() method on our packages dictionary \n",
-    "instance. Composition allows us to use objects as attributes, as well as access all their attributes and methods."
+    "Finally, we define a total_size method which computes the total size of all packages contained in our repository. This method iterates through the values in our repository dictionary and adds together the size attributes from each \n",
+    "package object contained in the dictionary, returning the total at the end. In this example, we’re making use of Package attributes within our Repository class. We’re also calling the values() method on our packages dictionary instance. Composition allows us to use objects as attributes, as well as access all their attributes and methods."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59263ee5-c944-4b9e-bcbc-9ab48da701c1",
+   "metadata": {},
+   "source": [
+    "Example 2: Clothing class and accessing the composition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82b49612-a946-4eca-afe2-56be3a426e49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Clothing:\n",
+    "    stock = {'name': [], 'material': [], 'amount': []}\n",
+    "\n",
+    "    def __init__(self, name):\n",
+    "        material = \"\"\n",
+    "        self.name = name\n",
+    "\n",
+    "    def add_item(self, name, material, amount):\n",
+    "        Clothing.stock['name'].append(self.name)\n",
+    "        Clothing.stock['material'].append(self.material)\n",
+    "        Clothing.stock['amount'].append(amount)\n",
+    "\n",
+    "    def Stock_by_Material(self, material):\n",
+    "        count = 0\n",
+    "        n = 0\n",
+    "        for item in Clothing.stock['material']:\n",
+    "            if item == material:\n",
+    "                count += Clothing.stock['amount'][n]\n",
+    "                n += 1\n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "815df2d2-610a-47d5-85d6-a3085f2b5ca5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class shirt(Clothing):\n",
+    "    material = \"Cotton\"\n",
+    "\n",
+    "class pants(Clothing):\n",
+    "    material = \"Cotton\"\n",
+    "\n",
+    "polo = shirt(\"Polo\")\n",
+    "sweatpants = pants(\"Sweatpants\")\n",
+    "polo.add_item(polo.name, polo.material, 4)\n",
+    "sweatpants.add_item(sweatpants.name, sweatpants.material, 6)\n",
+    "current_stock = polo.Stock_by_Material(\"Cotton\")\n",
+    "print(current_stock)  # should return 10, since polo & sweatpants using cotton material"
    ]
   }
  ],
