Target: Local -> Py-Learn [beta]
OS: MAC
app: Jupyter

--- a/Coursera/Crash Course on Python by Google/Week 4 - String, Lists and Dictionaries/4_1 Strings - 4 Creating new string.ipynb
+++ b/Coursera/Crash Course on Python by Google/Week 4 - String, Lists and Dictionaries/4_1 Strings - 4 Creating new string.ipynb
@@ -133,6 +133,44 @@
     "\"dog\" in pet    # True\n",
     "\"Dog\" in pet    # False"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b190f4bb-0a93-4c1e-8b48-5bad2bc42f87",
+   "metadata": {},
+   "source": [
+    "    Example 3: The real situations using this method"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "99c81a64-3d64-4ea2-a1c8-cecc86bd2a65",
+   "metadata": {},
+   "source": [
+    "1. Our company has moved to using a new domain\n",
+    "2. all the employees email address will using the new domain format\n",
+    "3. most of the employees still using the old domain\n",
+    "4. your job is writes a program that replaces this old domain with the new one"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6bc8d606-391f-4cd8-8e12-43074d03825e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# todo 1: define the function that replace the domain that accepts 3 arguments\n",
+    "def replace_domain(email, old_domain, new_domain):\n",
+    "    # Todo 2: check the keyword inside the email is correct (@old_domain)\n",
+    "    if \"@\" + old_domain in email:\n",
+    "        # Todo 3: iterates the elements inside the old domain by taking the incorrect email format (the old domain)\n",
+    "        index = email.index(\"@\" + old_domain)\n",
+    "        # Todo 4: Create the new email, by take out the incorrect format and replacing with the new one\n",
+    "        new_email = email[:index] + \"@\" + new_domain\n",
+    "        return new_email\n",
+    "    return email"
+   ]
   }
  ],
  "metadata": {
