Target: Local -> Py-Learn [beta]
OS: MAC
app: Jupyter

--- a/Coursera/Crash Course on Python by Google/Week 6 - Writing Scripting from the Ground Up/6_1 Scripting - 4 Writing the script.ipynb
+++ b/Coursera/Crash Course on Python by Google/Week 6 - Writing Scripting from the Ground Up/6_1 Scripting - 4 Writing the script.ipynb
@@ -65,13 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "908a6a49-d1fd-4b53-beb7-7f69d8860da5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def generate_report(machines):\n",
-    "    "
+    "    # iterating over the keys and values in dictionary\n",
+    "    for machine, users in machines.items():\n",
+    "        if len(users) > 0:  # excluding the user yg tidak login\n",
+    "            user_list = \", \".join(users)\n",
+    "            print(f\"{machine}: {user_list}\")"
    ]
   }
  ],
