--- a/Coursera/Crash Course on Python by Google/Week 6 - Writing Scripting from the Ground Up/6_1 Scripting - 6 Debugging the script.ipynb
+++ b/Coursera/Crash Course on Python by Google/Week 6 - Writing Scripting from the Ground Up/6_1 Scripting - 6 Debugging the script.ipynb
@@ -16,30 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_event_date(event):\n",
-    "  return event.date\n",
+    "    return event.date\n",
     "\n",
     "def current_users(events):\n",
-    "  events.sort(key=get_event_date)\n",
-    "  machines = {}\n",
-    "  for event in events:\n",
-    "    if event.machine not in machines:\n",
-    "      machines[event.machine] = set()\n",
-    "    if event.type == \"login\":\n",
-    "      machines[event.machine].add(event.user)\n",
-    "    elif event.type == \"logout\":\n",
-    "      machines[event.machine].remove(event.user)\n",
-    "  return machines\n",
+    "    events.sort(key=get_event_date)\n",
+    "    machines = {}\n",
+    "    for event in events:\n",
+    "        if event.machine not in machines:\n",
+    "            machines[event.machine] = set()\n",
+    "        if event.type == \"login\":\n",
+    "            machines[event.machine].add(event.user)\n",
+    "        elif machines[event.machine] == set():  # fixing the unregistered logout user\n",
+    "            pass\n",
+    "        elif event.type == \"logout\":\n",
+    "            machines[event.machine].remove(event.user)\n",
+    "    return machines\n",
     "\n",
     "def generate_report(machines):\n",
-    "  for machine, users in machines.items():\n",
-    "    if len(users) > 0:\n",
-    "      user_list = \", \".join(users)\n",
-    "      print(\"{}: {}\".format(machine, user_list))"
+    "    for machine, users in machines.items():\n",
+    "        if len(users) > 0:\n",
+    "            user_list = \", \".join(users)\n",
+    "            print(\"{}: {}\".format(machine, user_list))"
    ]
   },
   {
@@ -56,11 +58,11 @@
    "outputs": [],
    "source": [
     "class Event:\n",
-    "  def __init__(self, event_date, event_type, machine_name, user):\n",
-    "    self.date = event_date\n",
-    "    self.type = event_type\n",
-    "    self.machine = machine_name\n",
-    "    self.user = user"
+    "    def __init__(self, event_date, event_type, machine_name, user):\n",
+    "        self.date = event_date\n",
+    "        self.type = event_type\n",
+    "        self.machine = machine_name\n",
+    "        self.user = user"
    ]
   },
   {
@@ -95,19 +97,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'chris'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-46e68509ab0d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0musers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcurrent_users\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mevents\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0musers\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-1-5fb178c90d75>\u001b[0m in \u001b[0;36mcurrent_users\u001b[0;34m(events)\u001b[0m\n\u001b[1;32m     11\u001b[0m       \u001b[0mmachines\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmachine\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtype\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"logout\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m       \u001b[0mmachines\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmachine\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mevent\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m   \u001b[0;32mreturn\u001b[0m \u001b[0mmachines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'chris'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'webserver.local': {'lane'}, 'myworkstation.local': set(), 'mailserver.local': set()}\n"
      ]
     }
    ],
@@ -134,9 +131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "webserver.local: lane\n"
+     ]
+    }
+   ],
    "source": [
     "generate_report(users)"
    ]
@@ -151,7 +156,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -165,9 +170,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
