Target: Local -> Py-Learn [beta]
OS: MAC
app: Jupyter
notes:

--- a/Udemy/100 Days Python Learning/D04 - Randomisation and Python List/D04-3-Python-List-Data-Structure.ipynb
+++ b/Udemy/100 Days Python Learning/D04 - Randomisation and Python List/D04-3-Python-List-Data-Structure.ipynb
@@ -15,7 +15,9 @@
    "id": "7da63d96-89c4-40af-ac84-1396fddc68ab",
    "metadata": {},
    "source": [
-    "- command ini memanggil data urutan ke 3 dari start (0=data nomor 1 di python) maka bisa menggunakan \"-\" untuk memanggil data urutan dari end (kanan)"
+    "- command ini memanggil data pada list \n",
+    "    - urutan ke 3 dari start (0=data nomor 1 di python) maka bisa \n",
+    "    - menggunakan \"-\" untuk memanggil data urutan dari end (kanan)"
    ]
   },
   {
