Target: Local -> Py-Learn [beta]
OS: MAC
app: Jupyter
notes:

--- a/Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/2_1 R&W Files 2 - Iterating through Files.ipynb
+++ b/Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/2_1 R&W Files 2 - Iterating through Files.ipynb
@@ -135,12 +135,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a75b415-2301-44e4-9f88-76418dd8abba",
+   "cell_type": "markdown",
+   "id": "e175e650-2bcf-4efe-bdcf-5432416d0cf2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "    Notes:\n",
+    "1. The lines have been sorted alphabetically, so they're no longer in the order that they were in the file (not working)\n",
+    "2. Python displays a newline character using \"\\n\" symbol when printing a list of strings.\n",
+    "\n",
+    "This is a way of explicitly showing that there's a new line character in those strings. In general, to display a character that's not printable, Python uses <font color = orange>***escape sequences***</font> with backslash, like \\n. Another common escape sequence is \\t, for tab. We can also use it for escaping quotes, if we have a string that contains either a single or double quote."
+   ]
   }
  ],
  "metadata": {
