Target: Local -> Py-Learn [beta]
OS: MAC
app: Jupyter
notes: ngerjain practice

--- a/Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/2_1 R&W Files 5 - Practice.ipynb
+++ b/Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/2_1 R&W Files 5 - Practice.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob\n",
+      "\n",
+      "Andrea\n",
+      "\n",
+      "Manuel\n",
+      "\n",
+      "Polly\n",
+      "\n",
+      "Khalid\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"guests.txt\") as guests:\n",
     "    for line in guests:\n",
@@ -60,15 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "new_guests = [\"Sam\", \"Danielle\", \"Jacob\"]\n",
     "\n",
-    "with open(\"guests.txt\", ___) as guests:\n",
+    "with open(\"guests.txt\", 'a') as guests:\n",
     "    for i in new_guests:\n",
-    "        guests.___(i + \"\\n\")\n",
+    "        guests.write(i + \"\\n\")\n",
     "\n",
     "guests.close()"
    ]
@@ -82,9 +99,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bob\n",
+      "\n",
+      "Andrea\n",
+      "\n",
+      "Manuel\n",
+      "\n",
+      "Polly\n",
+      "\n",
+      "Khalid\n",
+      "\n",
+      "Sam\n",
+      "\n",
+      "Danielle\n",
+      "\n",
+      "Jacob\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"guests.txt\") as guests:\n",
     "    for line in guests:\n",
