Notes: adding pycharm configuration on Jupyter Target: Local > Learning [beta] OS: Windows 8 app: Pycharm

--- a/Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/2_1 R&W Files 2 - Iterating through Files.ipynb
+++ b/Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/2_1 R&W Files 2 - Iterating through Files.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "6bce053a-5662-4497-975c-a1e9076758a6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Intro\n",
     "file objects can be iterated in the same way as other Python sequences like list or strings. This is really useful when you want to process a file line by line. Say for example you want to make a whole line uppercase before printing it"
@@ -13,7 +17,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "efbc3c88-bbfa-40a0-81a6-e6f5e4212939",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "path = '/Users/ruangguru/Simb-ahh/Py/local/coursera.txt'"
@@ -23,7 +31,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "5f7c0704-055d-4d88-b651-041cb074ffbc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -52,7 +64,11 @@
   {
    "cell_type": "markdown",
    "id": "1304330e-4e8d-4eb1-83bd-a085af95a2d4",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "    Unused new linebreak\n",
     "- What's happening is that the file has a new line character at the end of each line. So when Python reads the file line by line, the line variable will always have a new line character at the end.\n",
@@ -65,7 +81,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "5a744152-3b8e-41c9-9f16-e3bb632f8637",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -89,7 +109,11 @@
   {
    "cell_type": "markdown",
    "id": "aadc7c67-4975-44d3-94fb-a392048a95ce",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Converting the file lines into a list\n",
     "Another way we can work with the contents of the file is to read the file lines into a list. Then, we can do something with the lists like ***sort contents*** using list method ***\"<font color = lime>sort</font>()\"***. To do that, we open the file and use the.readlines method"
@@ -99,7 +123,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "2cb5ef0f-805d-405e-8c5a-abc0c827bacd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "file = open(path)\n",
@@ -110,7 +138,11 @@
   {
    "cell_type": "markdown",
    "id": "088e7f8b-bf69-4ba3-be69-e1d6f1fb8fa0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Even though the file object is now closed, the lines variable has the list of lines in the file, so we can operate on it. For example, let's sort it and print it."
    ]
@@ -119,7 +151,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "befce59e-a54b-4f9d-a687-929220848da6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -137,7 +173,11 @@
   {
    "cell_type": "markdown",
    "id": "e175e650-2bcf-4efe-bdcf-5432416d0cf2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "    Notes:\n",
     "1. The lines have been sorted alphabetically, so they're no longer in the order that they were in the file (not working)\n",
