--- a/Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/2_1 R&W Files 3 - Writing Files.ipynb
+++ b/Coursera/Google IT Automation with Python Specialization/2 - Python to Interact With the OS/Week 2 - Programming with files/2_1 R&W Files 3 - Writing Files.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "3c1e67b9-4708-4c8a-affd-8a6d34482460",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Writing Files using python"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "c1f72f55-5320-446f-9d7c-3f9ebc554faa",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "path = '/Users/ruangguru/Simb-ahh/Py/local/coursera.txt'"
@@ -22,7 +30,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "33ce7877-2266-4c4b-b8b4-53e13bd347af",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "with open(path, 'w') as file:\n",
@@ -32,7 +44,11 @@
   {
    "cell_type": "markdown",
    "id": "88bfe400-9b4c-4641-9bf3-9790aa4f4ab0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Explanation\n",
     "- we're using the \"with\" block pattern to open a txt file on the passed path\n",
@@ -44,7 +60,11 @@
   {
    "cell_type": "markdown",
    "id": "bb71fc20-ca40-487e-88c9-41fdcc273f0f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "File objects can be opened in several different modes. <font color = orange>A ***mode***</font> is similar to a file permission. It governs what you can do with the file you've just opened. By default, the open function uses ***the r mode***, which stands for ***read only***. You get an error if you try to write to a file opened in read only mode. Since read only is the default, we don't have to pass the R as a second argument when we just want to read the file.\n",
     "\n",
