Refactoring & adding winner function
Local -> Py-Learn [beta]

OS: MAC
app: Jupyter

--- a/Udemy/100 Days Python Learning/D09 - Dictionary, Nesting & Secret Auction/D09-5-Final - Auction Project.ipynb
+++ b/Udemy/100 Days Python Learning/D09 - Dictionary, Nesting & Secret Auction/D09-5-Final - Auction Project.ipynb
@@ -70,7 +70,7 @@
    "id": "26970056-41ed-4ca6-a930-35c6311096bb",
    "metadata": {},
    "source": [
-    "Todo 2: Validate the highest bid"
+    "    Todo 2: Validate the highest bid"
    ]
   },
   {
@@ -83,11 +83,11 @@
     "def bid_winner(bid_records):\n",
     "    max_bid = 0\n",
     "    winner = \"\"\n",
-    "    for x in bid_records:  # looping the dictionary contents\n",
-    "        if bid_records[x] > max_bid:  # check the dict price(value) vs max bidding\n",
-    "            bid = auctions[bidder]  # replacing the value jika ada harga baru yg leih tinggi\n",
-    "            winner = bidder.title()  # taking the key(name) from the max bidding\n",
-    "    print(f\"This auction is winning by {winner} with ${bid}.\")"
+    "    for x in bid_records:  # looping the passed arguments(dictionary)\n",
+    "        if bid_records[x] > max_bid:  # check the auctions price(value) vs max bidding\n",
+    "            max_bid = bid_records[x]  # replacing the value jika ada harga baru yg leih tinggi\n",
+    "            winner = x.title()  # taking the key(name) from the max bidding\n",
+    "    print(f'This auction is winning by \"{winner}\" with \"${max_bid}\".')"
    ]
   },
   {
@@ -98,14 +98,15 @@
    "outputs": [],
    "source": [
     "print(logo)\n",
-    "max_bid = False  # looping condition\n",
-    "while not max_bid:\n",
+    "sold = False  # looping condition\n",
+    "while not sold:\n",
     "    bidder = input('What is your name?')  # setup the name for the key\n",
     "    price = int(input(\"How much your offering?\"))  # setup price for the value\n",
     "    auctions[bidder] = price  # assigning the name & price into dictionary\n",
-    "    next = input(\"Is there any higher bid? Type 'yes' or 'no'.\\n\").lower()\n",
-    "    if next == 'no':\n",
-    "        max_bid = True  # ending the loops when there's no challenger\n",
+    "    prompt = input(\"Is there any higher bid? Type 'yes' or 'no'.\\n\").lower()\n",
+    "    if prompt == 'no':\n",
+    "        sold = True  # ending the loops when there's no challenger\n",
+    "        bid_winner(auctions)  # calling bid winner function to show the winner\n",
     "    else:  \n",
     "        cls()  # clearing previous logs\n",
     "        print(f\"Last bid is $ {price}\")  # showing the last bid price"
