Converting py to notebook
OS: Windows 8
app: Jupyter Lab

--- a/Udemy/100 Days Python Learning/D10 - Functions with output/D10-2-Multiple-return-explanation'.ipynb
+++ b/Udemy/100 Days Python Learning/D10 - Functions with output/D10-2-Multiple-return-explanation'.ipynb
@@ -12,7 +12,6 @@
    "cell_type": "markdown",
    "id": "3db4f00d-3390-4070-bc8a-e97adbf71f38",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -76,11 +75,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c5bcbbaa-a3b7-4916-8e91-4bcd9502eede",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def format_name(first, last):\n",
+    "    if first == \"\" or last == \"\":\n",
+    "        return \"You inserting empty value, please check again\"\n",
+    "    f = first.title()\n",
+    "    l = last.title()\n",
+    "    return f\"{f} {l}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "662b9cba-b977-478e-8159-6be1da21336f",
+   "metadata": {},
+   "source": [
+    "- Early return digunakan untuk mengakhiri code block sebelum mencapai akhir script\n",
+    "- Case di atas merupakan contoh early return untuk menghandle empty value pada input, supaya tidak executing code di bawahnya"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7586e896-d061-4219-8e47-c38b6f5a5b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What is your first name?  \n",
+      "What is your last name?  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You inserting empty value, please check again\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(format_name(input(\"What is your first name? \"),input(\"What is your last name? \")))"
+   ]
   }
  ],
  "metadata": {
