--- a/Udemy/100 Days Python Learning/D10 - Functions with output/D10-7-Calculator Part 2.ipynb
+++ b/Udemy/100 Days Python Learning/D10 - Functions with output/D10-7-Calculator Part 2.ipynb
@@ -120,7 +120,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -135,6 +135,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c19755229f92828ed9983117e2a7f8a1cac6c8656c17c4590448400be61caf74"
+   }
   }
  },
  "nbformat": 4,
