--- a/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
+++ b/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
@@ -14,7 +14,9 @@
    "id": "f6571967-6f08-49f7-bacf-2eb579330840",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from art import logo"
+   ]
   },
   {
    "cell_type": "markdown",
