--- a/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
+++ b/Udemy/100 Days Python Learning/D11 - Blackjack Project/D11 - BlackJack.ipynb
@@ -15,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from art import logo\n",
-    "import random"
+    "from art import logo"
    ]
   },
   {
